; ModuleID = '/home/carl/AnghaBench/php-src/ext/openssl/extr_openssl.c_php_openssl_dispose_config.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/openssl/extr_openssl.c_php_openssl_dispose_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.php_x509_request = type { i32*, i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.php_x509_request*)* @php_openssl_dispose_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @php_openssl_dispose_config(%struct.php_x509_request* %0) #0 {
  %2 = alloca %struct.php_x509_request*, align 8
  store %struct.php_x509_request* %0, %struct.php_x509_request** %2, align 8
  %3 = load %struct.php_x509_request*, %struct.php_x509_request** %2, align 8
  %4 = getelementptr inbounds %struct.php_x509_request, %struct.php_x509_request* %3, i32 0, i32 2
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load %struct.php_x509_request*, %struct.php_x509_request** %2, align 8
  %9 = getelementptr inbounds %struct.php_x509_request, %struct.php_x509_request* %8, i32 0, i32 2
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @EVP_PKEY_free(i32* %10)
  %12 = load %struct.php_x509_request*, %struct.php_x509_request** %2, align 8
  %13 = getelementptr inbounds %struct.php_x509_request, %struct.php_x509_request* %12, i32 0, i32 2
  store i32* null, i32** %13, align 8
  br label %14

14:                                               ; preds = %7, %1
  %15 = load %struct.php_x509_request*, %struct.php_x509_request** %2, align 8
  %16 = getelementptr inbounds %struct.php_x509_request, %struct.php_x509_request* %15, i32 0, i32 1
  %17 = load i32*, i32** %16, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %26

19:                                               ; preds = %14
  %20 = load %struct.php_x509_request*, %struct.php_x509_request** %2, align 8
  %21 = getelementptr inbounds %struct.php_x509_request, %struct.php_x509_request* %20, i32 0, i32 1
  %22 = load i32*, i32** %21, align 8
  %23 = call i32 @CONF_free(i32* %22)
  %24 = load %struct.php_x509_request*, %struct.php_x509_request** %2, align 8
  %25 = getelementptr inbounds %struct.php_x509_request, %struct.php_x509_request* %24, i32 0, i32 1
  store i32* null, i32** %25, align 8
  br label %26

26:                                               ; preds = %19, %14
  %27 = load %struct.php_x509_request*, %struct.php_x509_request** %2, align 8
  %28 = getelementptr inbounds %struct.php_x509_request, %struct.php_x509_request* %27, i32 0, i32 0
  %29 = load i32*, i32** %28, align 8
  %30 = icmp ne i32* %29, null
  br i1 %30, label %31, label %38

31:                                               ; preds = %26
  %32 = load %struct.php_x509_request*, %struct.php_x509_request** %2, align 8
  %33 = getelementptr inbounds %struct.php_x509_request, %struct.php_x509_request* %32, i32 0, i32 0
  %34 = load i32*, i32** %33, align 8
  %35 = call i32 @CONF_free(i32* %34)
  %36 = load %struct.php_x509_request*, %struct.php_x509_request** %2, align 8
  %37 = getelementptr inbounds %struct.php_x509_request, %struct.php_x509_request* %36, i32 0, i32 0
  store i32* null, i32** %37, align 8
  br label %38

38:                                               ; preds = %31, %26
  ret void
}

declare dso_local i32 @EVP_PKEY_free(i32*) #1

declare dso_local i32 @CONF_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
